feat: implement user sponsor all functionality
